--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset=UTF-8>
 <meta name=viewport content="width=device-width, initial-scale=1.0">
-<title>Concessionária Premium</title>
+<title>Concessionária CONCEPTOR</title>
 <link rel=stylesheet href=styles.css>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel=stylesheet>
 </head>
@@ -43,27 +43,27 @@
 <div class=car-item data-car-id=2>
 <img src=imagens/3.png alt="Carro 2">
 <h3>LAMBORGHINI</h3>
-<p>Descrição breve do carro.</p>
+<p>O Giallo Belenus tem cristais na pintura que cintilam sob a luz do sol. Dependendo da iluminação, essa cor pode variar de um amarelo banana vibrante a um tom mais suave de limão</p>
 </div>
 <div class=car-item data-car-id=3>
 <img src=imagens/4.png alt="Carro 3">
 <h3>BUGATTI</h3>
-<p>Descrição breve do carro.</p>
+<p>O motor 8 litros W16 quad-turbo é o mesmo do Veyron, no entanto, muito mais moderno. O Chiron tem agora 1500 cavalos de potência e 163,1 kgf.m (1.600 N.m) de torque iniciando a 2.000 rpm.</p>
 </div>
 <div class=car-item data-car-id=4>
 <img src=imagens/6.png alt="Carro 4">
 <h3>MUSTANG</h3>
-<p>Descrição breve do carro.</p>
+<p>O Ford Mustang é um automóvel desportivo produzido pela Ford Motor Company. O carro foi apresentado ao público em 17 de abril de 1964 durante a New York World's Fair. O Mustang, apesar de ter sofrido grandes alterações ao longo dos anos é a mais antiga linha de automóveis da Ford, cujo nome se inspira na única raça de cavalo selvagem do país. Foi o primeiro "Muscle Car" da história, sendo seguido anos mais tarde por modelos concorrentes inspirados claramente nele.</p>
 </div>
 <div class=car-item data-car-id=5>
 <img src=imagens/5.png alt="Carro 5">
 <h3>RAM</h3>
-<p>Descrição breve do carro.</p>
+<p>A Ram Rampage é uma picape monobloco produzida pela Stellantis no Brasil e comercializada através da marca americana Ram. Lançada em junho de 2023, é o primeiro veículo da marca Ram a ser produzido no Brasil.</p>
 </div>
 <div class=car-item data-car-id=6>
 <img src=imagens/2.png alt="Carro 6">
 <h3>FERRARI</h3>
-<p>Descrição breve do carro.</p>
+<p>O Ferrari 360 é um carro esportivo produzido pela fabricante italiana Ferrari entre 1999 e 2004, com três versões oferecidas: Ferrari 360 Modena, um cupê de duas portas; Ferrari 360 Spider, um conversível de duas portas; e Challenge Stradale, a versão aprimorada dos 360 Modena.</p>
 </div>
 </div>
 </div>
@@ -122,7 +122,7 @@
 </div>
 </section>
 <footer>
-<p>&copy; 2023 Concessionária CONCEPTOR. Todos os direitos reservados.</p>
+<p>&copy; 2023 Concessionária CONCEPTOR. Todos os direitos reservados.By Rog Du</p>
 </footer>
 <script src=script.js></script>
 </body>
